--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,77 +1,77 @@
 .cell {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .land {
-    background: burlywood;
+  background: burlywood;
 }
 
 .sea {
-    background: #006994;
+  background: #006994;
 }
 
 .ice {
-    background: #E1E7E4
+  background: #e1e7e4;
 }
 
 .city1 {
-    background: #43464B
+  background: #43464b;
 }
 
 .city2 {
-    background: #989898;
+  background: #989898;
 }
 
 .city3 {
-    background: #707378;
+  background: #707378;
 }
 
 .forrest1 {
-    background: #516f2f
+  background: #516f2f;
 }
 
 .forrest2 {
-    background: #568444;
+  background: #568444;
 }
 
 .forrest3 {
-    background: #91a243;
+  background: #91a243;
 }
 
 .cloud {
-    width: 19px;
-    height: 19px;
-    position: absolute;
-    background: #C2BFBA;
-    opacity: 0.4;
+  width: 19px;
+  height: 19px;
+  position: absolute;
+  background: #c2bfba;
+  opacity: 0.4;
 }
 
 .temperature {
-    width: 19px;
-    height: 19px;
-    position: absolute;
+  width: 19px;
+  height: 19px;
+  position: absolute;
 }
 
 .temp-opacity {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .drop {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    width: 0.9em;
-    height: 0.9em;
-    border: none;
-    -webkit-border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
-    border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
-    font: normal 100%/normal Arial, Helvetica, sans-serif;
-    color: rgba(0,0,0,1);
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    background: #1abc9c;
-    -webkit-transform: rotateZ(-45deg);
-    transform: rotateZ(-45deg);
-    margin-left: 0.1em;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 0.9em;
+  height: 0.9em;
+  border: none;
+  -webkit-border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
+  border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
+  font: normal 100% / normal Arial, Helvetica, sans-serif;
+  color: rgba(0, 0, 0, 1);
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  background: #1abc9c;
+  -webkit-transform: rotateZ(-45deg);
+  transform: rotateZ(-45deg);
+  margin-left: 0.1em;
 }
